envoy.v2.yaml
node:
  id: somevalue
  cluster: somevalue
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 6666
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9999
  filter_chains:
    - filters:
        - name: envoy.http_connection_manager
          config:
            stat_prefix: ingress_http
            codec_type: AUTO
            route_config:
              name: local_route
              virtual_hosts:
                - name: local_service
                  domains:
                    - "*"
                  routes:
                    - match:
                        prefix: /helloworld
                      route:
                        cluster: helloworld-service
            http_filters:
              - name: envoy.router
  clusters:
    - name: helloworld-service
      connect_timeout: 0.25s
      lb_policy: ROUND_ROBIN
      type: strict_dns
  http2_protocol_options: {}
  hosts:
    - socket_address:
        address: host.docker.internal
        port_value: 50051
